force-app/main/default/objects/LLC_BI__ProductDocTab__c/LLC_BI__ProductDocTab__c.object-meta.xml
<CustomObject>
    <label>ProductDocTab</label>
    <nameField>
        <displayFormat>PDT-{00000000}</displayFormat>
        <label>Product Tab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductDocTabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>