force-app/main/default/objects/LLC_BI__ProductDocTab__c/fields/LLC_BI__DocTab__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DocTab__c</fullName>
    <description>This field is required. This field links this record to a DocTab record.</description>
    <label>DocTab</label>
    <referenceTo>LLC_BI__DocTab__c</referenceTo>
    <relationshipLabel>ProductDocTabs</relationshipLabel>
    <relationshipName>ProductDocTabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>