force-app/main/default/objects/LLC_BI__ProductDocTab__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>This field is required. This field links this record to a product.</description>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>ProductDocTabs</relationshipLabel>
    <relationshipName>ProductDocTabs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>